# digital_quilt

./: .gitignore  Makefile  README.md  automation.ts  build.sh  convert.sh  example.ts  index.css  index.html  index.ts  panel.ts  quilt.ts  tsconfig.json
digital_quilt/: Pipfile  README.md  __init__.py  __main__.py  blank.py  overlay.py  pyproject.toml  quilt.py  resize.py
example/: colors.csv  images.csv  weights.csv
web_app/: .gitignore  automation.ts  index.css  index.html  index.ts  metadata.ts  panel.ts  quilt.ts  tsconfig.json
